--- a/src/MauiTemplatesCLI/MauiAppX/Views/MainPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Views/MainPage.xaml
@@ -13,21 +13,14 @@
     Title="{x:Bind Title}"
     x:DataType="vm:MainViewModel"
     mc:Ignorable="d">
-<!--#else-->
-<ContentPage
-    x:Class="MauiApp._1.Views.MainPage"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:MauiApp._1"
-    xmlns:vm="clr-namespace:MauiApp._1.ViewModels"
-    Title="{Binding Title}"
-    x:DataType="vm:MainViewModel"
-    mc:Ignorable="d">
-<!--#endif-->
     <ContentPage.Content>
+<!--#if (Net8)-->
+        <BlazorWebView
+            HostPage="wwwroot/index.html"
+            StartPath="{x:Bind StartPath}">
+<!--#else-->
         <BlazorWebView HostPage="wwwroot/index.html">
+<!--#endif-->
             <BlazorWebView.RootComponents>
                 <RootComponent
                     Selector="#app"
@@ -44,10 +37,45 @@
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MauiApp._1"
+    xmlns:vm="clr-namespace:MauiApp._1.ViewModels"
+    Title="{Binding Title}"
+    x:DataType="vm:MainViewModel"
+    mc:Ignorable="d">
+    <ContentPage.Content>
+<!--#if (Net8)-->
+        <BlazorWebView
+            HostPage="wwwroot/index.html"
+            StartPath="{Binding StartPath}">
+<!--#else-->
+        <BlazorWebView HostPage="wwwroot/index.html">
+<!--#endif-->
+            <BlazorWebView.RootComponents>
+                <RootComponent
+                    Selector="#app"
+                    ComponentType="{x:Type local:Main}" />
+            </BlazorWebView.RootComponents>
+        </BlazorWebView>
+    </ContentPage.Content>
+</ContentPage>
+<!--#endif-->
+<!--#else-->
+<ContentPage
+    x:Class="MauiApp._1.Views.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MauiApp._1"
     Title="MauiApp._1"
     mc:Ignorable="d">
     <ContentPage.Content>
+<!--#if (Net8)-->
+        <BlazorWebView
+            HostPage="wwwroot/index.html"
+            StartPath="/counter">
+<!--#else-->
         <BlazorWebView HostPage="wwwroot/index.html">
+<!--#endif-->
             <BlazorWebView.RootComponents>
                 <RootComponent
                     Selector="#app"
